# vimrc

./: .gitignore  .gitmodules  .netrwhist  README.md  color.sh  common_vimrc  default.zsh-theme  install.sh  omz.sh  test  vimrc  zsh-plugin.sh  zshrc
assets/: omz.sh  zsh-plugin.sh
extensions/: main.vim
extensions/auto-complete/: main.vim
extensions/auto_complete/cpp/: on.vim
extensions/syntax/: brainfuck.vim
extensions/vim-brainfuck/: main.vim  syntax.vim
nvim/: lazy-lock.json  lazyvim.json
nvim/data/asynctasks/: tasks.ini
nvim/data/snippets/: package.json  typst.json
nvim/data/templates/: default.cmake  default.typ  homework.typ  preamble.typ
nvim/lua/config/: autocmds.lua  keymaps.lua  options.lua
nvim/lua/plugins/: editor.lua  lang.lua  lsp.lua  ui.lua
templates/: .default.cpp.swp  CMakeLists.txt  clang-format  default.c  default.cpp  math-abbr.typ  preamble.typ  util.hpp
vim/: common_vimrc  vimrc
vim/extensions/auto-complete/: main.vim
vim/extensions/auto-complete/cpp/: off.vim
vim/extensions/auto-complete/golang/: on.vim
vim/extensions/vim-brainfuck/: indent.vim  syntax.vim
vim/templates/: Makefile  clang-format  default.c  default.cpp  math-abbr.typ  preamble.typ  quickio.h
zsh/: cc.zsh  fzf.zsh  hexo.zsh  proxy.zsh  tempdir.zsh  tui.zsh
